docs: create cv

--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-Вторник 06.06.2022
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cv</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/favicon.ico">
+    <link rel="fonts" href="assets/fonts/Roboto-Black.ttf">
+</head>
+<body>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#Contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#Summary" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#Skills" class="nav-link">Slills</a></li>
+                    <li class="nav-item"><a href="#Edukation" class="nav-link">Edukation</a></li>
+                    <li class="nav-item"><a href="#Language skills" class="nav-link">Language skills</a></li>
+                </ul>
+
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <img src="assets/img/foto.jpg" alt="мое фото" width="200" height="300">
+            <h1>Mandrik Oleg</h1>
+            <h3>JUNIOR FRONT-END DEVELOPER</h3>
+        </div>
+        <section class="section" id="Contacts">
+            <h2>Contact</h2>
+            <ul>
+                <li>Minsk, Belarus</li>
+                <li>Email: mandrykoleh@mail.ru</li>
+                <li>Github: Olegka22</li>
+                <li>Telegram: Oleg Mandrik</li>
+                <li>Discord: Oleg123</li>
+            </ul>
+        </section>
+        <section class="section" id="Summary">
+            <h2>Summary</h2>
+            <p>Likes to learn new programs. By education - a process engineer, I write control programs for CNC machines.
+                I make parts for various fields of mechanical engineering (medicine, aerospace, heavy engineering).</p>
+        </section>
+        <section class="section" id="Skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Web-development: HTML, CSS</li>
+                <li>Version control : GIT, Github</li>
+            </ul>
+        </section>
+        <section class="section" id="Edukation">
+            <h2>Edukation</h2>
+            <ul>
+                <li>Belarusian National Technical University</li>
+                <li>Belarusian National Technical University "Institute for staff development and retraining"</li>
+            </ul>
+        </section>
+        <section class="section" id="Language skills">
+            <h2>Language skills</h2>
+            <ul>
+                <li>English - A1 - Basic</li>
+                <li>Czech - A2 - Elementary</li>
+            </ul>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p><a href="https://rs.school/js/"><img src="assets/img/rs_school_js.svg" alt="rs_school_js" width="100" height="37"></a></p>
+        </div>
+    </footer>
+</body>
+</html>
